contrib/maloc/src/vsh/vyacc.output
Terminals which are not used

   LESS_LESS
   LESS_AND
   GREATER_AND
   AND_GREATER
   LESS_GREATER
   GREATER_BAR
   LESS_LESS_MINUS
   SELECT
   FUNCTION
   BANG


State 119 conflicts: 2 shift/reduce
State 145 conflicts: 2 shift/reduce


Grammar

    0 $accept: inputunit $end

    1 inputunit: simple_list '\n'
    2          | '\n'
    3          | vsh_EOF
    4          | error newlines

    5 simple_list: simple_list1
    6            | simple_list1 '&'
    7            | simple_list1 ';'

    8 simple_list1: simple_list1 AND_AND newlines simple_list1
    9             | simple_list1 OR_OR newlines simple_list1
   10             | simple_list1 '&' simple_list1
   11             | simple_list1 ';' simple_list1
   12             | pipeline
   13             | '!' pipeline

   14 pipeline: pipeline '|' newlines pipeline
   15         | command

   16 list: newlines list0

   17 list0: list1
   18      | list1 '\n' newlines
   19      | list1 '&' newlines
   20      | list1 ';' newlines

   21 list1: list1 AND_AND newlines list1
   22      | list1 OR_OR newlines list1
   23      | list1 '&' newlines list1
   24      | list1 ';' newlines list1
   25      | list1 '\n' newlines list1
   26      | pipeline
   27      | '!' pipeline

   28 redirection: '>' WORD
   29            | GREATER_GREATER WORD

   30 redirections: redirection
   31             | redirections redirection

   32 command: simple_command
   33        | shell_command

   34 simple_command: simple_command_element
   35               | simple_command simple_command_element

   36 shell_command: shell_command_1
   37              | shell_command_1 redirections

   38 shell_command_1: for_command
   39                | case_command
   40                | while_command
   41                | until_command
   42                | if_command
   43                | subshell
   44                | group_command
   45                | function_def

   46 simple_command_element: WORD
   47                       | ASSIGNMENT_WORD
   48                       | redirection

   49 subshell: '(' list ')'

   50 group_command: '{' list '}'

   51 function_def: WORD '(' ')' newlines group_command
   52             | WORD '(' ')' newlines group_command redirections

   53 if_command: IF list THEN list FI
   54           | IF list THEN list ELSE list FI
   55           | IF list THEN list elif_clause FI

   56 elif_clause: ELIF list THEN list
   57            | ELIF list THEN list ELSE list
   58            | ELIF list THEN list elif_clause

   59 case_command: CASE WORD newlines IN newlines ESAC
   60             | CASE WORD newlines IN case_clause_sequence newlines ESAC
   61             | CASE WORD newlines IN case_clause_1 ESAC

   62 case_clause_1: pattern_list_1
   63              | case_clause_sequence pattern_list_1

   64 pattern_list_1: newlines pattern ')' list
   65               | newlines pattern ')' newlines
   66               | newlines '(' pattern ')' list
   67               | newlines '(' pattern ')' newlines

   68 case_clause_sequence: pattern_list
   69                     | case_clause_sequence pattern_list

   70 pattern_list: newlines pattern ')' list SEMI_SEMI
   71             | newlines pattern ')' newlines SEMI_SEMI
   72             | newlines '(' pattern ')' list SEMI_SEMI
   73             | newlines '(' pattern ')' newlines SEMI_SEMI

   74 pattern: WORD
   75        | pattern '|' WORD

   76 for_command: FOR WORD newlines DO list DONE
   77            | FOR WORD newlines '{' list '}'
   78            | FOR WORD ';' newlines DO list DONE
   79            | FOR WORD ';' newlines '{' list '}'
   80            | FOR WORD newlines IN words term newlines DO list DONE
   81            | FOR WORD newlines IN words term newlines '{' list '}'

   82 while_command: WHILE list DO list DONE

   83 until_command: UNTIL list DO list DONE

   84 words: /* empty */
   85      | words WORD

   86 term: '\n'
   87     | ';'
   88     | vsh_EOF

   89 newlines: /* empty */
   90         | newlines '\n'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 18 25 86 90
'!' (33) 13 27
'&' (38) 6 10 19 23
'(' (40) 49 51 52 66 67 72 73
')' (41) 49 51 52 64 65 66 67 70 71 72 73
';' (59) 7 11 20 24 78 79 87
'>' (62) 28
'{' (123) 50 77 79 81
'|' (124) 14 75
'}' (125) 50 77 79 81
error (256) 4
IF (258) 53 54 55
THEN (259) 53 54 55 56 57 58
ELSE (260) 54 57
ELIF (261) 56 57 58
FI (262) 53 54 55
CASE (263) 59 60 61
IN (264) 59 60 61 80 81
ESAC (265) 59 60 61
FOR (266) 76 77 78 79 80 81
WHILE (267) 82
UNTIL (268) 83
DO (269) 76 78 80 82 83
DONE (270) 76 78 80 82 83
SEMI_SEMI (271) 70 71 72 73
AND_AND (272) 8 21
OR_OR (273) 9 22
LESS_LESS (274)
GREATER_GREATER (275) 29
LESS_AND (276)
GREATER_AND (277)
AND_GREATER (278)
LESS_GREATER (279)
GREATER_BAR (280)
LESS_LESS_MINUS (281)
WORD (282) 28 29 46 51 52 59 60 61 74 75 76 77 78 79 80 81 85
ASSIGNMENT_WORD (283) 47
SELECT (284)
FUNCTION (285)
BANG (286)
vsh_EOF (287) 3 88


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
inputunit (44)
    on left: 1 2 3 4, on right: 0
simple_list (45)
    on left: 5 6 7, on right: 1
simple_list1 (46)
    on left: 8 9 10 11 12 13, on right: 5 6 7 8 9 10 11
pipeline (47)
    on left: 14 15, on right: 12 13 14 26 27
list (48)
    on left: 16, on right: 49 50 53 54 55 56 57 58 64 66 70 72 76 77
    78 79 80 81 82 83
list0 (49)
    on left: 17 18 19 20, on right: 16
list1 (50)
    on left: 21 22 23 24 25 26 27, on right: 17 18 19 20 21 22 23 24
    25
redirection (51)
    on left: 28 29, on right: 30 31 48
redirections (52)
    on left: 30 31, on right: 31 37 52
command (53)
    on left: 32 33, on right: 15
simple_command (54)
    on left: 34 35, on right: 32 35
shell_command (55)
    on left: 36 37, on right: 33
shell_command_1 (56)
    on left: 38 39 40 41 42 43 44 45, on right: 36 37
simple_command_element (57)
    on left: 46 47 48, on right: 34 35
subshell (58)
    on left: 49, on right: 43
group_command (59)
    on left: 50, on right: 44 51 52
function_def (60)
    on left: 51 52, on right: 45
if_command (61)
    on left: 53 54 55, on right: 42
elif_clause (62)
    on left: 56 57 58, on right: 55 58
case_command (63)
    on left: 59 60 61, on right: 39
case_clause_1 (64)
    on left: 62 63, on right: 61
pattern_list_1 (65)
    on left: 64 65 66 67, on right: 62 63
case_clause_sequence (66)
    on left: 68 69, on right: 60 63 69
pattern_list (67)
    on left: 70 71 72 73, on right: 68 69
pattern (68)
    on left: 74 75, on right: 64 65 66 67 70 71 72 73 75
for_command (69)
    on left: 76 77 78 79 80 81, on right: 38
while_command (70)
    on left: 82, on right: 40
until_command (71)
    on left: 83, on right: 41
words (72)
    on left: 84 85, on right: 80 81 85
term (73)
    on left: 86 87 88, on right: 80 81
newlines (74)
    on left: 89 90, on right: 4 8 9 14 16 18 19 20 21 22 23 24 25 51
    52 59 60 61 64 65 66 67 70 71 72 73 76 77 78 79 80 81 90


state 0

    0 $accept: . inputunit $end

    error            shift, and go to state 1
    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '\n'             shift, and go to state 10
    vsh_EOF          shift, and go to state 11
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    inputunit               go to state 16
    simple_list             go to state 17
    simple_list1            go to state 18
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 1

    4 inputunit: error . newlines

    $default  reduce using rule 89 (newlines)

    newlines  go to state 34


state 2

   53 if_command: IF . list THEN list FI
   54           | IF . list THEN list ELSE list FI
   55           | IF . list THEN list elif_clause FI

    $default  reduce using rule 89 (newlines)

    list      go to state 35
    newlines  go to state 36


state 3

   59 case_command: CASE . WORD newlines IN newlines ESAC
   60             | CASE . WORD newlines IN case_clause_sequence newlines ESAC
   61             | CASE . WORD newlines IN case_clause_1 ESAC

    WORD  shift, and go to state 37


state 4

   76 for_command: FOR . WORD newlines DO list DONE
   77            | FOR . WORD newlines '{' list '}'
   78            | FOR . WORD ';' newlines DO list DONE
   79            | FOR . WORD ';' newlines '{' list '}'
   80            | FOR . WORD newlines IN words term newlines DO list DONE
   81            | FOR . WORD newlines IN words term newlines '{' list '}'

    WORD  shift, and go to state 38


state 5

   82 while_command: WHILE . list DO list DONE

    $default  reduce using rule 89 (newlines)

    list      go to state 39
    newlines  go to state 36


state 6

   83 until_command: UNTIL . list DO list DONE

    $default  reduce using rule 89 (newlines)

    list      go to state 40
    newlines  go to state 36


state 7

   29 redirection: GREATER_GREATER . WORD

    WORD  shift, and go to state 41


state 8

   46 simple_command_element: WORD .
   51 function_def: WORD . '(' ')' newlines group_command
   52             | WORD . '(' ')' newlines group_command redirections

    '('  shift, and go to state 42

    $default  reduce using rule 46 (simple_command_element)


state 9

   47 simple_command_element: ASSIGNMENT_WORD .

    $default  reduce using rule 47 (simple_command_element)


state 10

    2 inputunit: '\n' .

    $default  reduce using rule 2 (inputunit)


state 11

    3 inputunit: vsh_EOF .

    $default  reduce using rule 3 (inputunit)


state 12

   13 simple_list1: '!' . pipeline

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    pipeline                go to state 43
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 13

   28 redirection: '>' . WORD

    WORD  shift, and go to state 44


state 14

   49 subshell: '(' . list ')'

    $default  reduce using rule 89 (newlines)

    list      go to state 45
    newlines  go to state 36


state 15

   50 group_command: '{' . list '}'

    $default  reduce using rule 89 (newlines)

    list      go to state 46
    newlines  go to state 36


state 16

    0 $accept: inputunit . $end

    $end  shift, and go to state 47


state 17

    1 inputunit: simple_list . '\n'

    '\n'  shift, and go to state 48


state 18

    5 simple_list: simple_list1 .
    6            | simple_list1 . '&'
    7            | simple_list1 . ';'
    8 simple_list1: simple_list1 . AND_AND newlines simple_list1
    9             | simple_list1 . OR_OR newlines simple_list1
   10             | simple_list1 . '&' simple_list1
   11             | simple_list1 . ';' simple_list1

    AND_AND  shift, and go to state 49
    OR_OR    shift, and go to state 50
    '&'      shift, and go to state 51
    ';'      shift, and go to state 52

    $default  reduce using rule 5 (simple_list)


state 19

   12 simple_list1: pipeline .
   14 pipeline: pipeline . '|' newlines pipeline

    '|'  shift, and go to state 53

    $default  reduce using rule 12 (simple_list1)


state 20

   48 simple_command_element: redirection .

    $default  reduce using rule 48 (simple_command_element)


state 21

   15 pipeline: command .

    $default  reduce using rule 15 (pipeline)


state 22

   32 command: simple_command .
   35 simple_command: simple_command . simple_command_element

    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 54
    ASSIGNMENT_WORD  shift, and go to state 9
    '>'              shift, and go to state 13

    $default  reduce using rule 32 (command)

    redirection             go to state 20
    simple_command_element  go to state 55


state 23

   33 command: shell_command .

    $default  reduce using rule 33 (command)


state 24

   36 shell_command: shell_command_1 .
   37              | shell_command_1 . redirections

    GREATER_GREATER  shift, and go to state 7
    '>'              shift, and go to state 13

    $default  reduce using rule 36 (shell_command)

    redirection   go to state 56
    redirections  go to state 57


state 25

   34 simple_command: simple_command_element .

    $default  reduce using rule 34 (simple_command)


state 26

   43 shell_command_1: subshell .

    $default  reduce using rule 43 (shell_command_1)


state 27

   44 shell_command_1: group_command .

    $default  reduce using rule 44 (shell_command_1)


state 28

   45 shell_command_1: function_def .

    $default  reduce using rule 45 (shell_command_1)


state 29

   42 shell_command_1: if_command .

    $default  reduce using rule 42 (shell_command_1)


state 30

   39 shell_command_1: case_command .

    $default  reduce using rule 39 (shell_command_1)


state 31

   38 shell_command_1: for_command .

    $default  reduce using rule 38 (shell_command_1)


state 32

   40 shell_command_1: while_command .

    $default  reduce using rule 40 (shell_command_1)


state 33

   41 shell_command_1: until_command .

    $default  reduce using rule 41 (shell_command_1)


state 34

    4 inputunit: error newlines .
   90 newlines: newlines . '\n'

    '\n'  shift, and go to state 58

    $default  reduce using rule 4 (inputunit)


state 35

   53 if_command: IF list . THEN list FI
   54           | IF list . THEN list ELSE list FI
   55           | IF list . THEN list elif_clause FI

    THEN  shift, and go to state 59


state 36

   16 list: newlines . list0
   90 newlines: newlines . '\n'

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '\n'             shift, and go to state 58
    '!'              shift, and go to state 60
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    pipeline                go to state 61
    list0                   go to state 62
    list1                   go to state 63
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 37

   59 case_command: CASE WORD . newlines IN newlines ESAC
   60             | CASE WORD . newlines IN case_clause_sequence newlines ESAC
   61             | CASE WORD . newlines IN case_clause_1 ESAC

    $default  reduce using rule 89 (newlines)

    newlines  go to state 64


state 38

   76 for_command: FOR WORD . newlines DO list DONE
   77            | FOR WORD . newlines '{' list '}'
   78            | FOR WORD . ';' newlines DO list DONE
   79            | FOR WORD . ';' newlines '{' list '}'
   80            | FOR WORD . newlines IN words term newlines DO list DONE
   81            | FOR WORD . newlines IN words term newlines '{' list '}'

    ';'  shift, and go to state 65

    $default  reduce using rule 89 (newlines)

    newlines  go to state 66


state 39

   82 while_command: WHILE list . DO list DONE

    DO  shift, and go to state 67


state 40

   83 until_command: UNTIL list . DO list DONE

    DO  shift, and go to state 68


state 41

   29 redirection: GREATER_GREATER WORD .

    $default  reduce using rule 29 (redirection)


state 42

   51 function_def: WORD '(' . ')' newlines group_command
   52             | WORD '(' . ')' newlines group_command redirections

    ')'  shift, and go to state 69


state 43

   13 simple_list1: '!' pipeline .
   14 pipeline: pipeline . '|' newlines pipeline

    '|'  shift, and go to state 53

    $default  reduce using rule 13 (simple_list1)


state 44

   28 redirection: '>' WORD .

    $default  reduce using rule 28 (redirection)


state 45

   49 subshell: '(' list . ')'

    ')'  shift, and go to state 70


state 46

   50 group_command: '{' list . '}'

    '}'  shift, and go to state 71


state 47

    0 $accept: inputunit $end .

    $default  accept


state 48

    1 inputunit: simple_list '\n' .

    $default  reduce using rule 1 (inputunit)


state 49

    8 simple_list1: simple_list1 AND_AND . newlines simple_list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 72


state 50

    9 simple_list1: simple_list1 OR_OR . newlines simple_list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 73


state 51

    6 simple_list: simple_list1 '&' .
   10 simple_list1: simple_list1 '&' . simple_list1

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    $default  reduce using rule 6 (simple_list)

    simple_list1            go to state 74
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 52

    7 simple_list: simple_list1 ';' .
   11 simple_list1: simple_list1 ';' . simple_list1

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    $default  reduce using rule 7 (simple_list)

    simple_list1            go to state 75
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 53

   14 pipeline: pipeline '|' . newlines pipeline

    $default  reduce using rule 89 (newlines)

    newlines  go to state 76


state 54

   46 simple_command_element: WORD .

    $default  reduce using rule 46 (simple_command_element)


state 55

   35 simple_command: simple_command simple_command_element .

    $default  reduce using rule 35 (simple_command)


state 56

   30 redirections: redirection .

    $default  reduce using rule 30 (redirections)


state 57

   31 redirections: redirections . redirection
   37 shell_command: shell_command_1 redirections .

    GREATER_GREATER  shift, and go to state 7
    '>'              shift, and go to state 13

    $default  reduce using rule 37 (shell_command)

    redirection  go to state 77


state 58

   90 newlines: newlines '\n' .

    $default  reduce using rule 90 (newlines)


state 59

   53 if_command: IF list THEN . list FI
   54           | IF list THEN . list ELSE list FI
   55           | IF list THEN . list elif_clause FI

    $default  reduce using rule 89 (newlines)

    list      go to state 78
    newlines  go to state 36


state 60

   27 list1: '!' . pipeline

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    pipeline                go to state 79
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 61

   14 pipeline: pipeline . '|' newlines pipeline
   26 list1: pipeline .

    '|'  shift, and go to state 53

    $default  reduce using rule 26 (list1)


state 62

   16 list: newlines list0 .

    $default  reduce using rule 16 (list)


state 63

   17 list0: list1 .
   18      | list1 . '\n' newlines
   19      | list1 . '&' newlines
   20      | list1 . ';' newlines
   21 list1: list1 . AND_AND newlines list1
   22      | list1 . OR_OR newlines list1
   23      | list1 . '&' newlines list1
   24      | list1 . ';' newlines list1
   25      | list1 . '\n' newlines list1

    AND_AND  shift, and go to state 80
    OR_OR    shift, and go to state 81
    '&'      shift, and go to state 82
    ';'      shift, and go to state 83
    '\n'     shift, and go to state 84

    $default  reduce using rule 17 (list0)


state 64

   59 case_command: CASE WORD newlines . IN newlines ESAC
   60             | CASE WORD newlines . IN case_clause_sequence newlines ESAC
   61             | CASE WORD newlines . IN case_clause_1 ESAC
   90 newlines: newlines . '\n'

    IN    shift, and go to state 85
    '\n'  shift, and go to state 58


state 65

   78 for_command: FOR WORD ';' . newlines DO list DONE
   79            | FOR WORD ';' . newlines '{' list '}'

    $default  reduce using rule 89 (newlines)

    newlines  go to state 86


state 66

   76 for_command: FOR WORD newlines . DO list DONE
   77            | FOR WORD newlines . '{' list '}'
   80            | FOR WORD newlines . IN words term newlines DO list DONE
   81            | FOR WORD newlines . IN words term newlines '{' list '}'
   90 newlines: newlines . '\n'

    IN    shift, and go to state 87
    DO    shift, and go to state 88
    '\n'  shift, and go to state 58
    '{'   shift, and go to state 89


state 67

   82 while_command: WHILE list DO . list DONE

    $default  reduce using rule 89 (newlines)

    list      go to state 90
    newlines  go to state 36


state 68

   83 until_command: UNTIL list DO . list DONE

    $default  reduce using rule 89 (newlines)

    list      go to state 91
    newlines  go to state 36


state 69

   51 function_def: WORD '(' ')' . newlines group_command
   52             | WORD '(' ')' . newlines group_command redirections

    $default  reduce using rule 89 (newlines)

    newlines  go to state 92


state 70

   49 subshell: '(' list ')' .

    $default  reduce using rule 49 (subshell)


state 71

   50 group_command: '{' list '}' .

    $default  reduce using rule 50 (group_command)


state 72

    8 simple_list1: simple_list1 AND_AND newlines . simple_list1
   90 newlines: newlines . '\n'

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '\n'             shift, and go to state 58
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    simple_list1            go to state 93
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 73

    9 simple_list1: simple_list1 OR_OR newlines . simple_list1
   90 newlines: newlines . '\n'

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '\n'             shift, and go to state 58
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    simple_list1            go to state 94
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 74

    8 simple_list1: simple_list1 . AND_AND newlines simple_list1
    9             | simple_list1 . OR_OR newlines simple_list1
   10             | simple_list1 . '&' simple_list1
   10             | simple_list1 '&' simple_list1 .
   11             | simple_list1 . ';' simple_list1

    AND_AND  shift, and go to state 49
    OR_OR    shift, and go to state 50

    $default  reduce using rule 10 (simple_list1)


state 75

    8 simple_list1: simple_list1 . AND_AND newlines simple_list1
    9             | simple_list1 . OR_OR newlines simple_list1
   10             | simple_list1 . '&' simple_list1
   11             | simple_list1 . ';' simple_list1
   11             | simple_list1 ';' simple_list1 .

    AND_AND  shift, and go to state 49
    OR_OR    shift, and go to state 50

    $default  reduce using rule 11 (simple_list1)


state 76

   14 pipeline: pipeline '|' newlines . pipeline
   90 newlines: newlines . '\n'

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '\n'             shift, and go to state 58
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    pipeline                go to state 97
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 77

   31 redirections: redirections redirection .

    $default  reduce using rule 31 (redirections)


state 78

   53 if_command: IF list THEN list . FI
   54           | IF list THEN list . ELSE list FI
   55           | IF list THEN list . elif_clause FI

    ELSE  shift, and go to state 98
    ELIF  shift, and go to state 99
    FI    shift, and go to state 100

    elif_clause  go to state 101


state 79

   14 pipeline: pipeline . '|' newlines pipeline
   27 list1: '!' pipeline .

    '|'  shift, and go to state 53

    $default  reduce using rule 27 (list1)


state 80

   21 list1: list1 AND_AND . newlines list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 102


state 81

   22 list1: list1 OR_OR . newlines list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 103


state 82

   19 list0: list1 '&' . newlines
   23 list1: list1 '&' . newlines list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 104


state 83

   20 list0: list1 ';' . newlines
   24 list1: list1 ';' . newlines list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 105


state 84

   18 list0: list1 '\n' . newlines
   25 list1: list1 '\n' . newlines list1

    $default  reduce using rule 89 (newlines)

    newlines  go to state 106


state 85

   59 case_command: CASE WORD newlines IN . newlines ESAC
   60             | CASE WORD newlines IN . case_clause_sequence newlines ESAC
   61             | CASE WORD newlines IN . case_clause_1 ESAC

    $default  reduce using rule 89 (newlines)

    case_clause_1         go to state 107
    pattern_list_1        go to state 108
    case_clause_sequence  go to state 109
    pattern_list          go to state 110
    newlines              go to state 111


state 86

   78 for_command: FOR WORD ';' newlines . DO list DONE
   79            | FOR WORD ';' newlines . '{' list '}'
   90 newlines: newlines . '\n'

    DO    shift, and go to state 112
    '\n'  shift, and go to state 58
    '{'   shift, and go to state 113


state 87

   80 for_command: FOR WORD newlines IN . words term newlines DO list DONE
   81            | FOR WORD newlines IN . words term newlines '{' list '}'

    $default  reduce using rule 84 (words)

    words  go to state 114


state 88

   76 for_command: FOR WORD newlines DO . list DONE

    $default  reduce using rule 89 (newlines)

    list      go to state 115
    newlines  go to state 36


state 89

   77 for_command: FOR WORD newlines '{' . list '}'

    $default  reduce using rule 89 (newlines)

    list      go to state 116
    newlines  go to state 36


state 90

   82 while_command: WHILE list DO list . DONE

    DONE  shift, and go to state 117


state 91

   83 until_command: UNTIL list DO list . DONE

    DONE  shift, and go to state 118


state 92

   51 function_def: WORD '(' ')' newlines . group_command
   52             | WORD '(' ')' newlines . group_command redirections
   90 newlines: newlines . '\n'

    '\n'  shift, and go to state 58
    '{'   shift, and go to state 15

    group_command  go to state 119


state 93

    8 simple_list1: simple_list1 . AND_AND newlines simple_list1
    8             | simple_list1 AND_AND newlines simple_list1 .
    9             | simple_list1 . OR_OR newlines simple_list1
   10             | simple_list1 . '&' simple_list1
   11             | simple_list1 . ';' simple_list1

    $default  reduce using rule 8 (simple_list1)


state 94

    8 simple_list1: simple_list1 . AND_AND newlines simple_list1
    9             | simple_list1 . OR_OR newlines simple_list1
    9             | simple_list1 OR_OR newlines simple_list1 .
   10             | simple_list1 . '&' simple_list1
   11             | simple_list1 . ';' simple_list1

    $default  reduce using rule 9 (simple_list1)


state 95

   10 simple_list1: simple_list1 '&' . simple_list1

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    simple_list1            go to state 74
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 96

   11 simple_list1: simple_list1 ';' . simple_list1

    IF               shift, and go to state 2
    CASE             shift, and go to state 3
    FOR              shift, and go to state 4
    WHILE            shift, and go to state 5
    UNTIL            shift, and go to state 6
    GREATER_GREATER  shift, and go to state 7
    WORD             shift, and go to state 8
    ASSIGNMENT_WORD  shift, and go to state 9
    '!'              shift, and go to state 12
    '>'              shift, and go to state 13
    '('              shift, and go to state 14
    '{'              shift, and go to state 15

    simple_list1            go to state 75
    pipeline                go to state 19
    redirection             go to state 20
    command                 go to state 21
    simple_command          go to state 22
    shell_command           go to state 23
    shell_command_1         go to state 24
    simple_command_element  go to state 25
    subshell                go to state 26
    group_command           go to state 27
    function_def            go to state 28
    if_command              go to state 29
    case_command            go to state 30
    for_command             go to state 31
    while_command           go to state 32
    until_command           go to state 33


state 97

   14 pipeline: pipeline . '|' newlines pipeline
   14         | pipeline '|' newlines pipeline .

    '|'  shift, and go to state 53

    $default  reduce using rule 14 (pipeline)


state 98

   54 if_command: IF list THEN list ELSE . list FI

    $default  reduce using rule 89 (newlines)

    list      go to state 120
    newlines  go to state 36


state 99

   56 elif_clause: ELIF . list THEN list
   57            | ELIF . list THEN list ELSE list
   58            | ELIF . list THEN list elif_clause

    $default  reduce using rule 89 (newlines)

    list      go to state 121
    newlines  go to state 36


state 100

   53 if_command: IF list THEN list FI .

    $default  reduce using rule 53 (if_command)


state 101

   55 if_command: IF list THEN list elif_clause . FI

    FI  shift, and go to state 122


state 102

   21 list1: list1 AND_AND newlines . list1
   90 newlines: newlines . '\n'
